```mermaid
classDiagram
    direction LR

    %% Component Interface
    class CartItem {
        <<interface>>
        +getPrice(): number
        +getName(): string
    }

    %% Leaf
    class Product {
        -name: string
        -price: number
        +getPrice(): number
        +getName(): string
    }

    %% Composite
    class GiftBox {
        -children: CartItem[]
        -name: string
        +add(item: CartItem): void
        +getPrice(): number
        +getName(): string
    }

    %% Relationships
    CartItem <|.. Product : implements
    CartItem <|.. GiftBox : implements
    GiftBox "1" *-- "*" CartItem : contains

    %% Client
    class Client
    Client --> CartItem